force-app/main/default/objects/GTM_Instrument__c/GTM_Instrument__c.object-meta.xml
<CustomObject>
    <label>GTM Instrument</label>
    <pluralLabel>GTM Instruments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Instrument Name</label>
    </nameField>
</CustomObject>