force-app/main/default/objects/GTM_Instrument__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Free-text offering key matching GTM_Offering__mdt.Offering_Key__c by convention -- no formal relationship (ADR-0009 pattern, same convention used by the other GTM_Assessment_* metadata types). Drives which offering's guest-facing assessment this instrument gates and authors questions for.</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>