force-app/main/default/objects/GTM_Instrument__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Lifecycle state of this instrument. Draft/Archived instruments are excluded from GtmAssessmentQuestions.isAssessmentAvailable's Active check -- only an Active row makes the guest-facing assessment available for offerings that have opted into this model (see docs/architecture/gtm-instrument-editor.md).</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><label>Draft</label><default>true</default></value>
            <value><fullName>Active</fullName><label>Active</label><default>false</default></value>
            <value><fullName>Archived</fullName><label>Archived</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>