force-app/main/default/objects/GTM_Instrument__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <description>Monotonically-incrementing version number for this instrument, bumped by GtmInstrumentController.publishInstrument (sub-issue 02) on each publish. Defaults to 1 on creation.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>1</defaultValue>
</CustomField>